[gd_scene load_steps=13 format=2]

[ext_resource path="res://scene2D/connectionPopup.gd" type="Script" id=1]
[ext_resource path="res://assets/images/interface/btn_blue.png" type="Texture" id=2]
[ext_resource path="res://assets/images/interface/close_btn_x64.png" type="Texture" id=3]


[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0.160784, 0.592157, 0.968627, 0.262745, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )
width = 580

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/fonts/normal.ttf"

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 12.0
content_margin_top = 17.0
bg_color = Color( 0, 0, 0, 0.4 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.8, 0.8, 0.8, 0.0941176 )
corner_radius_top_right = 37
corner_radius_bottom_left = 19

[sub_resource type="DynamicFontData" id=8]
font_path = "res://assets/fonts/normal.ttf"

[sub_resource type="DynamicFont" id=9]
size = 18
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://assets/fonts/normal.ttf"

[sub_resource type="DynamicFont" id=11]
size = 20
font_data = SubResource( 10 )

[node name="connectionPopup" type="Node2D"]
editor/display_folded = true
position = Vector2( 230, 100 )
script = ExtResource( 1 )

[node name="style" type="Node2D" parent="."]
editor/display_folded = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="ColorRect3" type="ColorRect" parent="style"]
margin_left = 7.0
margin_top = 7.0
margin_right = 587.0
margin_bottom = 387.0
color = Color( 0, 0, 0, 0.145098 )

[node name="ColorRect" type="ColorRect" parent="style"]
margin_right = 580.0
margin_bottom = 380.0
color = Color( 0.172549, 0.192157, 0.196078, 1 )

[node name="ColorRect2" type="ColorRect" parent="style"]
margin_right = 580.0
margin_bottom = 70.0
color = Color( 0.164706, 0.227451, 0.243137, 1 )

[node name="ColorRect4" type="ColorRect" parent="style"]
margin_top = 69.0
margin_right = 580.0
margin_bottom = 71.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect6" type="ColorRect" parent="style"]
margin_right = 580.0
margin_bottom = 2.0

[node name="ColorRect7" type="ColorRect" parent="style"]
margin_right = 2.0
margin_bottom = 379.0
color = Color( 1, 1, 1, 0.392157 )

[node name="ColorRect8" type="ColorRect" parent="style"]
margin_left = 578.0
margin_right = 580.0
margin_bottom = 379.0
color = Color( 0, 0, 0, 0.392157 )

[node name="ColorRect5" type="ColorRect" parent="style"]
margin_top = 378.0
margin_right = 580.0
margin_bottom = 380.0
color = Color( 0, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="style"]
scale = Vector2( 1, 68.604 )
texture = SubResource( 4 )
centered = false

[node name="title" type="RichTextLabel" parent="."]
margin_top = 17.0
margin_right = 580.0
margin_bottom = 59.0
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]CONNECTION"
text = "CONNECTION"
scroll_active = false
__meta__ = {
"_edit_lock_": true
}

[node name="pseudo" type="LineEdit" parent="."]
editor/display_folded = true
margin_left = 89.5367
margin_top = 104.537
margin_right = 489.537
margin_bottom = 174.537
custom_styles/normal = SubResource( 7 )
max_length = 14
placeholder_text = "Entrez votre pseudo"
__meta__ = {
"_edit_group_": true
}

[node name="label" type="RichTextLabel" parent="pseudo"]
margin_left = 13.0
margin_top = 3.0
margin_right = 405.0
margin_bottom = 43.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 9 )
custom_colors/default_color = Color( 0.552941, 0.552941, 0.552941, 1 )
text = "Pseudo :"
scroll_active = false

[node name="password" type="LineEdit" parent="."]
editor/display_folded = true
margin_left = 89.5367
margin_top = 194.537
margin_right = 489.537
margin_bottom = 264.537
custom_styles/normal = SubResource( 7 )
max_length = 14
secret = true
placeholder_text = "Entrez votre mots de passe"
__meta__ = {
"_edit_group_": true
}

[node name="label" type="RichTextLabel" parent="password"]
margin_left = 13.0
margin_top = 3.0
margin_right = 405.0
margin_bottom = 43.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 9 )
custom_colors/default_color = Color( 0.552941, 0.552941, 0.552941, 1 )
text = "password :"
scroll_active = false

[node name="error" type="RichTextLabel" parent="."]
visible = false
margin_top = 264.0
margin_right = 580.0
margin_bottom = 306.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 11 )
custom_colors/default_color = Color( 1, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]ERROR"
text = "ERROR"
scroll_active = false

[node name="doneBtn" type="Sprite" parent="."]
position = Vector2( 290, 330 )
texture = ExtResource( 2 )

[node name="doneBtn" type="Control" parent="doneBtn"]
margin_left = -107.0
margin_top = -28.0
margin_right = 107.0
margin_bottom = 32.0

[node name="title" type="RichTextLabel" parent="doneBtn"]
margin_left = -104.0
margin_top = -15.0
margin_right = 105.0
margin_bottom = 27.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 11 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[center]Se connecter"
text = "Se connecter"
scroll_active = false

[node name="look" type="Node" parent="."]
editor/display_folded = true

[node name="btnClose" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.360784 )
position = Vector2( 517, 4 )
texture = ExtResource( 3 )
centered = false

[node name="btn_close" type="Control" parent="btnClose"]
margin_right = 64.0
margin_bottom = 64.0
[connection signal="gui_input" from="doneBtn/doneBtn" to="." method="onClickBtnDone"]
[connection signal="mouse_entered" from="doneBtn/doneBtn" to="." method="_on_doneBtn_mouse_entered"]
[connection signal="mouse_exited" from="doneBtn/doneBtn" to="." method="_on_DoneBtn_mouse_exited"]
[connection signal="gui_input" from="btnClose/btn_close" to="." method="_on_btn_close_gui_input"]
[connection signal="mouse_entered" from="btnClose/btn_close" to="." method="_on_btn_close_mouse_entered"]
[connection signal="mouse_exited" from="btnClose/btn_close" to="." method="_on_btn_close_mouse_exited"]
